--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://pranjalvidyarthi.github.io/The-Blossom-Studio",  
-
+  "homepage": "https://pranjalvidyarthi.github.io/The-Blossom-Studio",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -27,8 +26,8 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^5.0.0",
     "globals": "^16.5.0",
-    "vite": "^7.2.4",
-    "gh-pages": "^5.0.0"
+    "vite": "^7.2.4"
   }
 }
